# open_quant

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md
docs/: architecture.md  binance_user_stream.md  risk_control.md  runbook.md
docs/superpowers/plans/: 2026-07-03-trend-model.md
docs/superpowers/specs/: 2026-07-03-trend-model-design.md
src/crypto_trading/: __init__.py  config.py  logging_config.py  main.py
src/crypto_trading/events/: __init__.py  event_bus.py  models.py  parser.py
src/crypto_trading/exchange/: __init__.py  binance_futures_rest.py  binance_futures_ws.py
src/crypto_trading/execution/: __init__.py  order_manager.py  order_state_machine.py
src/crypto_trading/model/: __init__.py  backtest.py  indicators.py  market_data.py  trend_model.py
src/crypto_trading/reconcile/: __init__.py  reconciler.py
src/crypto_trading/risk/: __init__.py  risk_manager.py
src/crypto_trading/state/: __init__.py  account_store.py  order_store.py  position_store.py
src/crypto_trading/storage/: __init__.py  duckdb_store.py
src/crypto_trading/strategy/: __init__.py  base.py  demo_strategy.py  trend_strategy.py
src/quant_infra/: const.py  db_utils.py  factor_analyze.py
tests/crypto_trading/: test_duckdb_store.py  test_event_parser.py  test_order_state_machine.py  test_risk_manager.py  test_trend_strategy.py
tests/crypto_trading/model/: test_backtest.py  test_indicators.py  test_market_data.py  test_trend_model.py
