[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-futures-event-system"
version = "0.1.0"
description = "Binance USD-M Futures event-driven trading system skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "pandas",
    "numpy",
    "httpx",
    "websockets",
    "pydantic",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
